# mdwrap

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG  LICENSE  README.md  pyproject.toml  pyproject.toml.poetry  requirements-freeze.txt  setup.cfg
.github/workflows/: lint-and-test.yml  release.yml
mdwrap/: cli.py
mdwrap/classes/: md_tokenizer.py
mdwrap/common/: formatter.py  line.py
mdwrap/common/abstract/: abstract_line_context.py  abstract_transform.py
mdwrap/md/: line_context.py  line_context_state.py  newline_transform.py  regex.py  tokenizer.py  unwrap_transform.py
mdwrap/md/transforms/: newline_transform.py  trailing_whitespace_transform.py  unwrap_transform.py  wrap_transform.py
mdwrap/utils/: argparse.py  regex_builder.py
tests/: test_cli.py  test_integration.py  test_md_tokenizer.py  test_newline_transform.py  test_trailing_whitespace_transform.py  test_unwrap_transform.py  test_wrap_transform.py
tests/integration/code_block/: expected.md  test.md
tests/integration/comment/: expected.md
tests/integration/front_matter/: expected.md  test.md
tests/integration/html/: expected.md  test.md
tests/integration/link_and_image/: test.md
tests/integration/list/: expected.md  test.md
tests/integration/math_block/: test.md
tests/integration/nested_admonition/: expected.md  test.md
tests/integration/paragraph/: expected.md  test.md
tests/integration/quotes/: expected.md  test.md
tests/integration/styles/: test.md
tests/integration/tables/: expected.md  test.md
tests/integration/toc/: expected.md  test.md
