[tool.poetry]
name = "mdwrap"
version = "0.2.1"
description = "A python based markdown line wrapper"
authors = ["Leonard <leocser632@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mdwrap"}]

[tool.poetry.scripts]
mdwrap = "mdwrap.cli:cli"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-blind-except = "^0.2.1"
flake8-docstrings = "^1.7.0"
flake8-bugbear = "^23.7.10"
flake8-comprehensions = "^3.14.0"
flake8-implicit-str-concat = "^0.4.0"
isort = "^5.12.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
