[project]
name = "mdwrap"
version = "0.2.1"
description = "A python based markdown line wrapper"
authors = [
    { name = "Leonard", email = "leocser632@gmail.com" }
]
dependencies = [
    "pre-commit>=3.7.0",
    "black>=24.3.0",
    "flake8>=7.0.0",
    "flake8-blind-except>=0.2.1",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=24.2.6",
    "flake8-comprehensions>=3.14.0",
    "flake8-implicit-str-concat>=0.4.0",
    "isort>=5.13.0",
    "pytest>=8.1.1"
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
bypass-selection = true
