[project]
name = "mdwrap"
version = "0.2.5"
description = "A python based markdown line wrapper"
authors = [
    { name = "Leonard", email = "leocser632@gmail.com" }
]
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">= 3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.1",
    "black>=24.4.2",
    "flake8>=7.0.0",
    "flake8-blind-except>=0.2.1",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=24.2.6",
    "flake8-comprehensions>=3.14.0",
    "flake8-implicit-str-concat>=0.4.0",
    "isort>=5.13.2",
    "pytest>=8.2.1",
    "build>=1.2.1"
]

[project.scripts]
mdwrap = "mdwrap.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mdwrap"]
